@@ -1,38 +1,39 @@
+##
+##  CMakeFile for libSUFR
+##  AF, 12/07/2010
+##
+##  To compile, from the directory that contains this file, do:
+##    $ mkdir build; cd build
+##    $ cmake ..
+##    $ make
+##
+
+
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 
-# Set build type. Do this *before* we set the project name
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING
+# Set build type. Do this *before* we set the project name:
+if( NOT CMAKE_BUILD_TYPE )
+  set( CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING
     "Choose the type of build, options are: None Debug Release RelWithDebInfo Profile."
     FORCE)
-endif(NOT CMAKE_BUILD_TYPE)
-set(CMAKE_CONFIGURATION_TYPES "${CMAKE_BUILD_TYPE}" CACHE INTERNAL "internal")
+endif( NOT CMAKE_BUILD_TYPE )
+set( CMAKE_CONFIGURATION_TYPES "${CMAKE_BUILD_TYPE}" CACHE INTERNAL "internal" )
 
 
-project(libSUFR Fortran)
+# Project name and language:
+project( libSUFR Fortran )
 
 
-# Increase verbosity for debugging:
-option(CMAKE_VERBOSE_MAKEFILE "Verbose makefile" off)
-
-
-# Various options that we may want to enable:
-option(WANT_OPENMP "Use OpenMP parallelisation (experimental)" off)
-option(WANT_SSE42  "Enable generation of SSE4.2 code" off)
-option(WANT_IPO    "Inter-procedural optimisation" off)
-option(WANT_STATIC "Generate statically linked executable" off)
-option(WANT_CHECKS "Activate runtime checks (array bounds, NaNs)" on)
-option(WANT_WARNINGS "Activate warnings" on)
-option(WANT_STRICT_FLOATS "Enable strict floating point calculations" off)
-
-
-# Search in the `cmake' directory for additional CMake modules.
+# Search in the CMake/ directory for CMake modules:
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)
 
 
+# Various compile/optimisation options that we may want to enable:
+include(SetCompileOptions)
+
+
 # Place the products in their directories:
-get_filename_component (Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)
-message ("Using compiler: " ${Fortran_COMPILER_NAME} " (" ${CMAKE_Fortran_COMPILER}")" )
+get_filename_component(Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)
 set(MODULE_DIRECTORY "${CMAKE_SOURCE_DIR}/usr/include/libSUFR/${Fortran_COMPILER_NAME}")
 set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/usr/lib")
 
@@ -54,6 +55,5 @@ set_target_properties( libSUFR_shared libSUFR_static PROPERTIES Fortran_MODULE_D
 
 # Install to destination:
 #   use DIRECTORY rather than TARGETS to allow include/<fortrancompiler>/
-install( DIRECTORY usr/
-  DESTINATION ${CMAKE_INSTALL_PREFIX})
+install( DIRECTORY usr/ DESTINATION ${CMAKE_INSTALL_PREFIX} )
 
